minor recipe code changes