@@ -20,7 +20,6 @@ import java.util.Set;
 import java.util.function.Supplier;
 
 public class WindingRecipe extends StandardProcessingRecipe<RecipeWrapper> implements IAssemblyRecipe {
-
 	public WindingRecipe(ProcessingRecipeParams params) {
 		super(TFMGRecipeTypes.WINDING, params);
 	}
@@ -40,20 +39,17 @@ public class WindingRecipe extends StandardProcessingRecipe<RecipeWrapper> imple
 		return 1;
 	}
 
-
 	public Ingredient getIngredient(){
-		return getIngredients().get(0);
+		return getIngredients().getFirst();
 	}
 	public Ingredient getSpool(){
 		return getIngredients().get(1);
 	}
 	@Override
 	public boolean matches(RecipeWrapper inv, Level worldIn) {
-		if (inv.isEmpty())
-			return false;
-		return ingredients.get(0).test(inv.getItem(0));
+		return !inv.isEmpty() && ingredients.getFirst().test(inv.getItem(0));
 	}
-//
+
 	@Override
 	public Component getDescriptionForAssembly() {
 		ItemStack[] matchingStacks = getSpool().getItems();
@@ -75,6 +71,6 @@ public class WindingRecipe extends StandardProcessingRecipe<RecipeWrapper> imple
 
 	@Override
 	public Supplier<Supplier<SequencedAssemblySubCategory>> getJEISubCategory() {
-		return ()->WindingCategory.AssemblyWinding::new;
+		return () -> WindingCategory.AssemblyWinding::new;
 	}
 }
